# interlinked

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: CI.yml  release.yml
interlinked/: __init__.py  config.py  draw.py  form.py  info.py  io.py  meta.py  stats.py  utils.py
scripts/: example.py  fxn_cxn.py  info_regions.py  pearson.py  workbench.py
src/: info.rs  lib.rs  stats.rs
tests/: test_add.py  test_pearson.py  test_spearman.py
