[package]
name    = "interlinked"
version = "0.1.6"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name       = "interlinked"
crate-type = ["cdylib"]

[profile.release]
opt-level     = 3
lto           = "fat"
codegen-units = 1

[dependencies]
pyo3    = { version = "0.28.2", features = ["extension-module", "abi3-py310"] }
numpy   = "0.28.0"
ndarray = "0.17"
statrs  = "0.18"
rayon   = "1"
kiddo   = "4"

