[build-system]
requires = ["maturin>=1.12,<2.0"]
build-backend = "maturin"

[project]
name = "interlinked"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "numpy >= 2.0.0",
    "scipy >= 1.13",
    "matplotlib >= 3.9",
    "h5py >= 3.11",
    "scikit-image >= 0.24",
]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
